use wrap_token git

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ scale = { package = "parity-scale-codec", version = "2.1", default-features = fa
 scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }
 sp-core = { version = "3.0", default-features = false }
 
-wrap_token = { path = "../wrap_token", default-features = false, features = ["ink-as-dependency"]  }
+wrap_token = { git = "https://github.com/xp-network/polkadot-wraptoken", default-features = false, features = ["ink-as-dependency"]  }
 
 [lib]
 name = "freezer"
