--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "freezer"
 version = "0.1.0"
-authors = ["[your_name] <[your_email]>"]
+authors = ["Dima Brook <dima@xp.network>", "rupansh <rupanshsekar@hotmail.com>"]
 edition = "2018"
 
 [dependencies]
